# project

./: Makefile  pyproject.toml  setup.py
VD_games/scripts/: VD_games.py
games_project_Kotayeva/: main.py  pyproject.toml
games_project_Kotayeva/VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py
scripts/: brain_calc.py  brain_gcd.py
